# frm-miner

./: .gitignore  BeetleFly.tsv  CMakeLists.txt  LICENSE  README.md  frequent_motif_discovery.py  parser.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
examples/: beetle.py  gesture.py  parser.py  telangana.py  tetris.py  utils.py
examples/data/: GesturePebbleZ1.tsv
examples/data/telangana/: example.ipynb  readme.html
experiments/: 1_runtime.py  1_runtime_analysis.py  2.1_params seglen.py  2_params.py  2_params_analysis.py  3_accuracy sim.py  5_bike.py  6_insect.py  benchmark.R  benchmark.py  bike.py  e0_mpeg.py  e0_pipeline.py  e10_params.py  e10_params_analysis.py  e10_stocks.py  e1_genjobs.py  e1_memory.py  e1_pipeline.py  e1_profile_ostinato.py  e1_runtime.py  e1_runtime_analysis.py  e1_single.py  e2_params.py  e2_params_analysis.py  e2_problem_setting.py  e2_stocks.py  e3_accuracy sim.py  e3_accuracy.py  e3_big.py  e3_cycling.py  e3_fit_to_json.py  e3_quantitative.py  e3_random walk.py  e4_insect.py  e4_scalability sim.py  e4_scalability ucr.py  e4_scalability_sim.py  e4_scalability_ucr.py  e4_tetris.py  (+29 more)
experiments/bike/: 2022-03-29 09:31:15+00:00.json  2022-03-29_11-31-14.json  2022-03-30 13:17:39+00:00.json  2022-03-30_15-16-07.json  2022-04-05 17:06:54+00:00.json  2022-04-05_19-06-43.json  2022-04-10_13-47-50.json  2022-04-19 10:17:15+00:00.json  2022-04-19_12-16-14.json  2022-04-21 18:58:00+00:00.json  2022-04-21_20-57-59.json  2022-04-28 17:42:44+00:00.json  2022-04-28_19-38-57.json  2022-05-10 15:19:56+00:00.json  2022-05-10_17-19-33.json  2022-05-14 18:00:35+00:00.json  2022-05-14_19-59-01.json  2022-05-17 17:41:26+00:00.json  2022-05-17_19-41-25.json  2022-05-25 15:05:33+00:00.json  2022-05-25_17-05-31.json  2022-06-01 20:14:38+00:00.json  2022-06-01_22-12-40.json  2022-06-12 13:09:14+00:00.json  2022-06-12_15-03-50.json  2022-06-14 18:25:30+00:00.json  2022-06-14_20-24-54.json  2022-06-15_20-06-16.json  2022-06-20 06:11:40+00:00.json  2022-06-20_08-11-38.json  2022-07-03 13:19:09+00:00.json  2022-07-03_15-19-07.json  2022-07-16_09-00-16.json  2022-08-01 18:12:57+00:00.json  2022-08-01_20-10-10.json  2022-08-01_21-12-56.json  2022-08-27_09-12-37.json  2022-09-08 16:34:22+00:00.json  2022-09-08_18-34-20.json  2022-09-14 17:17:02+00:00.json  (+101 more)
frm/: __init__.py  miner.py  motif.py  patterns.py  preprocessing.py
frm/_frm_py/: miner.py  motif.py  patterns.py  preprocessing.py
motifminer/: GSP.py  PatternMiner.py  __init__.py  mapper.py  miner.py  motif.py  preprocessing.py
src/: bind.cpp  main.cpp  miner.cpp  miner.h  motif.cpp  motif.h  patterns.cpp  patterns.h  sax.cpp  sax.h  typing.h
tests/: test_GSP.py  test_PatternMiner.py  test_data.py  test_miner.py  test_motif.py  test_patterns.py  test_preprocessing.py
