[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frm-miner"
version = "0.0.7"
authors = [
    {name = "Stijn J. Rotman", email = "s.j.rotman@uvt.nl"},
]
description = "Mine Frequent Representative Motifs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["frm*"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
skip = ["pp*", "*-musllinux_aarch64"]
test-skip = ["*universal2:arm64"]