[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "frm-miner"
version = "2.0"
authors = [
    {name = "Stijn J. Rotman", email = "s.j.rotman@uvt.nl"},
]
description = "Mine Frequent Representative Motifs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest"]
experiments = [
    "matplotlib",
    "opencv-python",
    "pillow",
    "stumpy",
    "setuptools",
    "pyscamp",
    "mass-ts",
    "tqdm",
    "yfinance",
    "fitdecode",
    "memory-profiler",
]

[tool.setuptools.packages.find]
include = ["frm*"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
skip = ["*_i686", "*_ppc64le", "*_s390x", "*_universal2"]